# diags

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conanfile.txt  fmt_cxx20.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: base-profiles.json  matrix.json
include/diags/: diagnostic.hpp  lngs_support.hpp  location.hpp  printer.hpp  source_code.hpp  sources.hpp  streams.hpp  string.hpp  translator.hpp
src/: diagnostic.cpp  printer.cpp  source_code.cpp  source_view.hpp  sources.cpp  streams.cpp  streams_file.cpp  string.cpp  translator.cpp  version.cpp  version.hpp.in
tests/: CMakeLists.txt  assorted_tests.cpp  diag_write_common.hpp  diag_write_mixed_test.cpp  diag_write_plural_test.cpp  diag_write_singular_test.cpp  diagnostic_test.cpp  gt_main.cpp  source_code_test.cpp  source_line_test.cpp  source_location_test.cpp  streams_test.cpp
tests/data/: the_raven.txt
tests/support/: default_data_path.hpp.in  diagnostic_str.cpp  diagnostic_str.hpp  mixed_types.hpp  mock_strings.cpp  outstrstream.hpp  plural_types.hpp  printer.cpp  printer.hpp  raven_text.hpp  singular_types.hpp  strings.cpp  strings.hpp  support.cpp  support.hpp  test_with_diagnostics.hpp
